# epubparser

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
src/epubparser/: main.py
