[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"


[project.scripts]
epubparser = "epubparser.main:main"


[project]
name = "epubparser"
version = "0.1.7"
#dynamic = ["version"]
authors = [
  { name="veralvx" },
]
maintainers = [
  {name = "veralvx"}
]

description = "Parse ebooks, extracts chapters and contents."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Filters",
    "Topic :: Text Processing :: General",
    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English"
]


keywords = ["epub", "ebook", "conversion", "filter"]

dependencies = [
  "ebooklib>=0.18,<0.20"
]


license = { file = "LICEN[CS]E*" }

[project.urls]
Homepage = "https://github.com/veralvx/epubparser"
Repository = "https://github.com/veralvx/epubparser.git"
Issues = "https://github.com/veralvx/epubparser/issues"
Mastodon = "https://mastodon.social/@veralvx"
Twitter = "https://x.com/veralvx"
Changelog = "https://github.com/veralvx/epubparser/blob/main/CHANGELOG.md"
